[gd_scene load_steps=9 format=3 uid="uid://vck4bl5wwflb"]

[ext_resource type="Script" uid="uid://omkrdyrq3u73" path="res://entities/main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://dcb46l45qknod" path="res://entities/background/background.png" id="4_msjn6"]
[ext_resource type="PackedScene" uid="uid://dpu03gqasp6pe" path="res://entities/tower/tower.tscn" id="5_2runn"]
[ext_resource type="Theme" uid="uid://bes7poiouimn8" path="res://utils/ui/default_theme.tres" id="5_lquwl"]
[ext_resource type="Script" uid="uid://bpfk6cgrwismq" path="res://entities/wave_spawner.gd" id="6_2v7j7"]
[ext_resource type="PackedScene" uid="uid://dljnepvvb7jvm" path="res://utils/ui/title_window.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://s7dq2bkumtuv" path="res://entities/collector/collector.tscn" id="7_msjn6"]

[sub_resource type="Curve2D" id="Curve2D_2runn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 241, -19, 0, 0, 0, 0, -21, -20, 0, 0, 0, 0, -25, 352, 0, 0, 0, 0, 639, 355, 0, 0, 0, 0, 639, -28, 0, 0, 0, 0, 377, -22)
}
point_count = 6

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="Layout" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_lquwl")

[node name="Background" type="ColorRect" parent="UI/Layout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="UI/Layout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Layout/MarginContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="UI/Layout/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start again"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Layout" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_lquwl")

[node name="Margin" type="MarginContainer" parent="HUD/Layout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ManaCount" type="Label" parent="HUD/Layout/Margin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.92941177, 0.9490196, 0.8862745, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.99607843)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 4
text = "Mana: x x x x"

[node name="PauseWindow" parent="." instance=ExtResource("6_7mycd")]
unique_name_in_owner = true
visible = false
offset_left = 300.0
offset_top = 64.0
offset_right = 700.0
offset_bottom = 464.0
title = "Options (Paused)"

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
texture = ExtResource("4_msjn6")
centered = false

[node name="WaveSpawner" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_2v7j7")

[node name="SpawnPath" type="Path2D" parent="WaveSpawner"]
unique_name_in_owner = true
curve = SubResource("Curve2D_2runn")

[node name="SpawnTimer" type="Timer" parent="WaveSpawner"]
wait_time = 10.0

[node name="Enemies" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="Tower" parent="." instance=ExtResource("5_2runn")]
unique_name_in_owner = true
position = Vector2(310, 170)
scale = Vector2(1, 0.9983467)

[node name="Spells" type="Node2D" parent="."]

[node name="Mana" type="Node2D" parent="."]

[node name="Collector" parent="." instance=ExtResource("7_msjn6")]

[connection signal="pressed" from="UI/Layout/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="timeout" from="WaveSpawner/SpawnTimer" to="WaveSpawner" method="_on_spawn_timer_timeout"]
[connection signal="cast_spell" from="Tower" to="." method="_on_tower_cast_spell"]
[connection signal="tower_destroyed" from="Tower" to="." method="_on_tower_tower_destroyed"]
